# TrinityOne

./: .gitattributes  .gitignore  CONTRIBUTING.md  CORNERSTONE-DESIGN-BRIEF.md  GO-LIVE-DOMAIN.md  HOSTING.md  IOS-BUILD.md  MANNA-MODULE.md  PILOT-READINESS.md  PITCH-DECK-BRIEF.md  POST-RENAME-TEST.md  README.md  RELEASES.md  ROADMAP.md  SAFEGUARDING.md  SECURITY.md  STEWARD-GUIDE.md  STEWARD-ROSTER-DESIGN.md  STEWARDS-AND-HANDOFF-EXPLAINED.md  TREASURY.md  TrinityOne Help.html  TrinityOne Quick Card.html  apk-latest.json  app.jsx  backup.jsx  brand.css  capacitor.config.json  catalog.json  data.jsx  downloads.html  ebible-catalog.json  engine.js  features.html  giving-ln.jsx  help-data.jsx  help-illustrations.jsx  how-trinityone-stays-up.html  icons.jsx  identity-avatar.jsx  identity-extras.jsx  (+57 more)
modules/: lex-abbott-smith.json  lex-bdb.json  strongs-dict.json
reference/: BACKLOG.md  PILOT-CHECKLIST.md  SIGNING.md  SPINE.md  TrinityOne-design-notes.md  brief-help-docs.md  brief-identity-profile.md  brief-relay-app-wizard.md  brief-wizard.md  giving-treasury-prep.md  help-content.md  proposal-blossom.md  proposal-mydata-nostr-backend.md  proposal-relay-app-steward-console.md  trinityone-fellowship-spec.md  trinityone-release-roadmap.md
relay/: dev-relay.mjs
relay-app/: README.md  control.html  install.sh  release-pubkey.pem  start.bat  start.mjs  start.sh
relay-app/desktop/src-tauri/: Cargo.toml  tauri.conf.json
relay-app/desktop/src-tauri/src/: main.rs
scripts/: android-env.sh  build-apk-index.sh  build-catalog.mjs  build-commentaries.py  build-fellowship.sh  (+30 more)
(+33 files in other folders)
